--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
 							<p class="pr-lg-5 pl-lg-5" >what's summer without the freshest watermelons in the market!</p>
 							<!-- Main-btn -->
 							<div class="atf-main-btn mt-3"> 
-								<a href="#home" class="page-scroll atf-themes-btn">Order Now<i class="fa fa-angle-right"></i></a>
+								<a href="#contact" class="page-scroll atf-themes-btn">Order Now<i class="fa fa-angle-right"></i></a>
 							</div>
 						</div><!--- END COL -->
 					</div><!--- END ROW -->
