--- a/templates/index.html
+++ b/templates/index.html
@@ -66,12 +66,13 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12	">
 								<div class="atf-top-header-in wow zoomIn" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
-									<ul class="atf-top-header-list">
+									<!--ul class="atf-top-header-list">
 										<li><i class="fas fa-clock"></i>Work time : Monday-Saturday</li>
 										<li>| 9:00AM - 06:00PM</li>
 										<li>| Closed On Sundays</li>
 										
-									</ul>
+									</ul -->
+									<h3 style="color:yellow;">OPEN ONLY FROM 15 NOVEMBER TO 30 DECEMBER. WE ARE CLOSED</h3>
 								</div>
 							</div><!--- END COL -->
 						</div><!--- END ROW -->
@@ -82,7 +83,7 @@
 					<div class="container">
 						<div class="atf-main-header-in">
 							<div class="atf-main-header-left">
-								<a class="atf-site-branding atf-white-logo" href="index.html"><h1 style="color:white;">eSihle WaterMelons</h1></a>
+								<a class="atf-site-branding atf-white-logo" href="/"><h1 style="color:white;">eSihle WaterMelons</h1></a>
 							</div>
 							
 							<div class="atf-main-header-right">
@@ -199,7 +200,7 @@
 										</div>
 										<div class="col-md-12">
 											<div class="actions atf-contact-btn text-left">
-												<button type="submit" class="btn atf-themes-btn">Send Order</button>
+												<button type="button" class="btn atf-themes-btn">Send Order</button>
 											</div>
 										</div>
 									</div>
